# nativo

./: 404.html  eslint.config.mjs  index.html  index.txt  package-lock.json  package.json
404/: index.html
api/: README.md  pyproject.toml
api/docs/: database-s3-integration.md  dynamodb-migration.md  dynamodb-troubleshooting.md  persistence-strategy.md  schema-migration-normalized.md
api/infrastructure/: template.yaml
api/requirements/: core.txt  data.txt  ml.txt
api/scripts/: build.sh  deploy.sh  dev.sh  test_database.py
api/src/: __init__.py
api/src/handlers/: __init__.py  embeddings.py  reports.py  user.py
api/src/shared/: __init__.py  auth.py  database.py  deprecated_models.py  models.py  utils.py
api/src/shared/database/: base.py  repository.py
api/src/shared/models/: base.py  database.py  request.py  response.py
create/: index.html  index.txt
dashboard/: index.html  index.txt
docs/: api-endpoints.md  api-infrastructure-summary.md  backend-implementation-todo.md  csv-structure.md  current-api-endpoints.md  export-favorites-feature.md  favorites-feature.md  job-id-title-encoding.md  original-api-integration-summary.md  product-comparison.md  quick-setup-guide.md  session-management.md
examples/: favoritesSystemExample.ts  mockDatabaseExample.ts
fetch/: index.html  index.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppHeader.tsx  AuthGuard.tsx  ConditionalHeader.tsx  FloatingAddButton.tsx  Header.tsx  ImageToolbar.tsx  ImageWithPlaceholder.tsx  ImageWorkspace.tsx  NewReportForm.tsx  NewReportModal.tsx  ReportCard.tsx  (+2 more)
(+99 files in other folders)
